Bug fixes - no longer randomly puts player on top if balances are equal - buy now always gets disabled if the player doesnt have enough balance